--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="change_city_description">Click Here to Change City</string>
     <string name="weather_description">This is the weather symbol</string>
     <string name="back_button_description">Dismiss Change City Screen</string>
-    <string name="get_weather">Change City</string>
+    <string name="city_name">Enter City</string>
     <string name="default_query">Enter city name</string>
 
 </resources>
